# lqg-anec-framework

./: .gitignore  2d_parameter_sweep_complete.json  2d_parameter_sweep_summary.csv  2d_parameter_sweep_table.csv  DISCOVERY_21_INTEGRATION_COMPLETE.md  DISCOVERY_21_VALIDATION_SUMMARY.md  EXPERIMENTAL_PLANNING_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  GHOST_EFT_BREAKTHROUGH_SUMMARY.md  GHOST_EFT_IMPLEMENTATION_COMPLETE.md  MILESTONE_SUMMARY.md  MISSION_COMPLETE.md  MISSION_COMPLETE_GHOST_EFT.md  PLATINUM_ROAD_COMPLETION_FINAL_REPORT.md  PLATINUM_ROAD_COMPLETION_REPORT.md  PLATINUM_ROAD_IMPLEMENTATION_VERIFIED.md  PLATINUM_ROAD_VALIDATION_COMPLETE.md  QFT_ANEC_COMPLETION_REPORT.json  QUANTUM_VACUUM_METAMATERIALS_COMPLETE.md  README.md  UQ-TODO-RESOLVED.ndjson  UQ-TODO.ndjson  VACUUM_ENGINEERING_FINAL_STATUS.md  VACUUM_ENGINEERING_SUMMARY.md  VnV-RESOLVED.ndjson  advanced_multi_dimensional_scanning.py  complete_qft_anec_restoration.py  complete_qft_anec_restoration_results.json  dashboard_ghost_scanner.py  debug_metamaterial.py  demonstrate_platinum_road_deliverables.py  example_best_source_analysis.py  example_focused_scan.py  example_optimal_ghost_verification.py  fast_instanton_uq_mapping.py  fast_tensor_propagator_data.json  fast_tensor_propagator_integration.py  final_platinum_road_validation.py  final_validation_test.py  full_tensor_propagator_integration.py  (+52 more)
advanced_scan_results/: 2d_high_res_scan_20250611_215239.json  2d_high_res_scan_20250611_215408.csv  2d_high_res_scan_20250611_215408.json  2d_high_res_scan_20250624_061332.json  3d_instanton_scan_20250611_215411.csv  (+6 more)
(+126 files in other folders)
