[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lqg_anec_framework"
version = "0.1.0"
description = "LQG ANEC metric-ansatz and geometry framework"
readme = "README.md"
license = { text = "Unlicense" }
authors = [
  { name = "Arcticoder" }
]
dependencies = [
  "sympy>=1.10",
  "numpy>=1.24",
  "scipy>=1.10"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lqg_anec_framework*"]
